# pangeo-forge-recipes

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  beam_test.py  codecov.yml  dev-requirements.txt  local.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: main.yaml  prepare-env.yaml  preview.yml  release.yaml  slash-command-dispatch.yaml  test-integration.yaml  tutorials.yaml
ci/: py3.10.yml  py3.11.yml  py3.7.yml  py3.8.yml  py3.9.yml  requirements-upstream-dev.txt  upstream-dev.yml
docs/: .bash_history  api.md  api_reference.md  bakeries.md  concepts.md  conf.py  contribute.md  contributing.md  deployment.md  design.md  development.md  ecosystem.md  execution.md  file_patterns.md  index.md  installation.md  installing_pangeo_forge.md  intro_tutorial.md  intro_tutorial_part1.ipynb  recipe_box.md  recipe_tutorial.ipynb  recipes.md  release_notes.md  requirements.txt  storage.md  what_is_pangeo_forge.md
docs/_static/: custom.css
docs/advanced/: globus.md  index.md
docs/cloud_automation_user_guide/: bakeries.md  index.md  recipe_box.md  recipes.md
docs/cloud_user_guide/: chatops_reference.md  index.md  pr_checks_reference.md  recipe_contribution.md
docs/composition/: file_patterns.md  index.md  openers.md  preprocess.md  styles.md  transforms.md  writers.md
docs/composition/examples/: gpcp-from-gcs.md  gpcp-rechunk.md  index.md  noaa-oisst.md
docs/deployment/: action.md  beam.md  cli.md  example-feedstocks.md  feedstocks.md  index.md
docs/development/: development_guide.md  index.md  release_notes.md
docs/examples/: index.md
docs/getting_started/: index.md  installation.md
docs/introduction_tutorial/: index.md  intro_tutorial_part1.ipynb  intro_tutorial_part1.md  intro_tutorial_part2.ipynb  intro_tutorial_part3.ipynb  part1.md
docs/introduction_tutorial_ocean_sciences/: intro_tutorial_part1.ipynb  intro_tutorial_part2.ipynb  intro_tutorial_part3.ipynb
docs/pangeo_forge_cloud/: core_concepts.md  index.md  pr_checks_reference.md  recipe_contribution.md
docs/pangeo_forge_recipes/: api_reference.md  index.md  installation.md
docs/pangeo_forge_recipes/development/: coordination.md  development_guide.md  index.md  release_notes.md
docs/pangeo_forge_recipes/recipe_user_guide/: execution.md  file_patterns.md  index.md  recipes.md  storage.md
docs/pangeo_forge_recipes/tutorials/: index.md
docs/recipe-user-guide/: index.md
docs/recipe_user_guide/: execution.md  file_patterns.md  index.md  recipes.md  storage.md
docs/source/: conf.py  index.md
docs/tutorials/: cmip6-recipe.ipynb  gpcp.md  index.md  multi_variable_recipe.ipynb  netcdf_zarr_sequential.ipynb  opendap_subset_recipe.ipynb  terraclimate.ipynb  woa18_decav_t01_5d.nc.1
docs/user_guide/: execution.md  file_patterns.md  index.md  recipes.md  storage.md
docs_src/: hrrr_kerchunk_concat_valid_time.py
docs_src/feedstock/: gpcp_from_gcs.py  hrrr_kerchunk_concat_step.py  hrrr_kerchunk_concat_valid_time.py  meta.yaml  narr_opendap.py  noaa_oisst.py  terraclimate.py
docs_src/recipes/: gpcp_from_gcs.py  hrrr_kerchunk_concat_step.py  terraclimate.py
examples/: beam_netcdf_to_zarr.py  cmip6_ref_beam.py  oisst-avhrr-v02r01-pipeline.py  oisst-avhrr-v02r01.py
examples/feedstock/: gpcp_from_gcs.py  gpcp_from_gcs_dynamic_chunks.py  gpcp_from_gcs_w_custom_transform.py  gpcp_rechunk.py  hrrr_kerchunk_concat_step.py  hrrr_kerchunk_concat_valid_time.py  meta.yaml  narr_opendap.py  noaa_oisst.py  pyramid_test.py  terraclimate.py
examples/new-feedstock/: meta.yaml  recipe.py
examples/runner-commands/: bake.sh
examples/runner-config/: local.json  local.py  s3.json
pangeo_forge/: __init__.py  cli.py  patterns.py  pipeline.py  recipe.py  storage.py  utils.py
pangeo_forge/cli/: bakery.py  forge.py  main.py  smithy.py
pangeo_forge/executors/: __init__.py  prefect.py  python.py
pangeo_forge/pipelines/: README.md  __init__.py  base.py  http_xarray_zarr.py  job.yaml  worker_pod.yaml
pangeo_forge/recipe/: recipe.py  storage.py  target.py
pangeo_forge/recipes/: __init__.py  base.py  xarray_zarr.py
pangeo_forge/tasks/: README.md  http.py  xarray.py  zarr.py
pangeo_forge_recipes/: README.md  __init__.py  __main__.py  aggregation.py  builders.py  chunk_grid.py  cli.py  combiners.py  config.py  dynamic_target_chunks.py  executors.py  injections.py  openers.py  options.py  patterns.py  rechunking.py  reference.py  serialization.py  storage.py  transforms.py  types.py  utils.py  writers.py
pangeo_forge_recipes/builders/: cmip.py
pangeo_forge_recipes/cli/: init.py  main.py  run.py
pangeo_forge_recipes/executors/: __init__.py  base.py  beam.py  dask.py  function.py  prefect.py  python.py
pangeo_forge_recipes/openers/: base.py  fsspec.py  xarray.py
pangeo_forge_recipes/recipes/: __init__.py  base.py  reference_hdf_zarr.py  reference_zarr.py  trmm_lis.py  xarray_zarr.py  xarray_zarr_beam.py
tests/: conftest.py  data_generation.py  fixtures.py  http_auth_server.py  parametrization_counter.py  test_aggregation.py  test_beam.py  test_chunk_grid.py  test_cli.py  test_combiners.py  test_consolidate.py  test_dynamic_target_chunks.py  test_end_to_end.py  test_executors.py  test_fixtures.py  test_integration.py  test_locking.py  test_openers.py  test_options.py  test_patterns.py  test_pipeline.py  test_pipelines.py  test_rechunking.py  test_recipe.py  test_recipes.py  test_references.py  test_serialization.py  test_storage.py  test_transforms.py  test_utils.py  test_writers.py
tests-integration/: conftest.py  test_gpcp.py  test_grib.py  test_hrrr_kerchunk_concat_step.py  test_hrrr_kerchunk_concat_valid_time.py  test_integration.py  test_narr_opendap.py  test_terraclimate.py
tests-integration/recipes/: gpcp_from_gcs.py
tests/recipe_tests/: test_HDFReferenceRecipe.py  test_ReferenceRecipe.py  test_XarrayZarrRecipe.py  test_execution_context.py  test_graph_memory.py  test_temp_storage_mixin.py
tests/tasks/: test_xarray.py
(+17 files in other folders)
