[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pangeo-forge-recipes"
dynamic = ["version"]
requires-python = ">=3.8"
description = "Pipeline tools for building and publishing analysis ready datasets."
readme = "README.md"
authors = [
  { name = "Ryan Abernathey", email = "rpa@ldeo.columbia.edu" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]
license = { text = "Apache-2.0" }
keywords = ["pangeo", "data"]
dependencies = [
    "apache-beam",
    "cftime",
    "dask >= 2021.11.2",
    "fastparquet",
    "fsspec[http] >= 2023.4.0",
    "h5netcdf",
    "h5py >= 3.3.0",
    "kerchunk >= 0.0.7",
    "netcdf4",
    "numcodecs >= 0.9.0",
    "xarray >= 0.18.0",
    "zarr >= 2.12.0",
]

[project.optional-dependencies]
test = [
    "click",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-lazy-fixture",
    "pytest-sugar",
    "pytest-timeout",
    "s3fs",
    "scipy",
]

minio = [
    "docker",
]

[project.urls]
Homepage = "https://github.com/pangeo-forge/pangeo-forge-recipes"
Tracker = "https://github.com/pangeo-forge/pangeo-forge-recipes/issues"
Documentation = "https://pangeo-forge.readthedocs.io/en/latest/"

[tool.setuptools_scm]
write_to = "pangeo_forge_recipes/_version.py"
write_to_template = "__version__ = '{version}'"

[tool.setuptools.packages.find]
exclude = ["docs_src"]

[tool.setuptools.package-data]
pangeo_forge_recipes = ["py.typed"]

[tool.black]
line-length = 100

[tool.isort]
known_first_party = "pangeo_forge_recipes"
known_third_party = ["aiohttp", "apache_beam", "cftime", "click", "dask", "fsspec", "kerchunk", "numpy", "pandas", "pytest", "pytest_lazyfixture", "s3fs", "xarray", "zarr"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 100

[tool.pytest.ini_options]
log_cli = false
timeout = 30
timeout_method = "signal"

[project.entry-points."pangeo_forge_runner.injection_specs"]
default_injections = "pangeo_forge_recipes.injections:get_injection_specs"
