[metadata]
name = pangeo-forge-recipes
description = Pipeline tools for building and publishing analysis ready datasets.
long_description = file:README.md
long_description_content_type = text/markdown
maintainer = Ryan Abernathey
maintainer_email = rpa@ldeo.columbia.edu
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

url = https://github.com/pangeo-forge/pangeo-forge-recipes
license = Apache
keywords = pangeo, data

[options]
zip_safe = False
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    setuptools
    click
    dask
    distributed
    h5py >= 3.3.0
    intake
    intake-xarray
    rechunker >= 0.4.2
    xarray >=0.18.0
    zarr >= 2.6.0
    numcodecs >= 0.9.0
    fsspec[http] >= 2021.6.0
    fsspec-reference-maker >= 0.0.4
    rich >= 10.16.1
    mypy_extensions

[options.extras_require]
dev =
    pytest
    pytest-sugar
    pytest-cov
    pytest-lazy-fixture
    scipy
    netcdf4
    h5netcdf
    zarr

[options.entry_points]
console_scripts =
    pangeo-forge-recipes = pangeo_forge_recipes.cli:main

[flake8]
max-line-length = 100

[isort]
known_first_party=pangeo_forge_recipes
known_third_party=aiohttp,apache_beam,click,dask,fsspec,fsspec_reference_maker,mypy_extensions,numpy,pandas,prefect,pytest,pytest_lazyfixture,setuptools,xarray,yaml,zarr
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=100

[tool:pytest]
log_cli = False
timeout = 30
timeout_method = signal
markers =
    no_executor: Tests that do not use an executor fixture.
    executor_function: Tests that use the Python function executor.
    executor_dask: Tests that use the Dask executor.
    executor_prefect: Tests that use the Prefect executor.
    executor_prefect_dask: Tests that use the Prefect executor with a Dask cluster.

# remove this once rechunker executors are factored into a standalone package
# that exports type hints (https://mypy.readthedocs.io/en/latest/installed_packages.html#installed-packages)

[mypy]
show_error_codes = True

[mypy-dask.*]
ignore_missing_imports = True
[mypy-rechunker.*]
ignore_missing_imports = True
[mypy-fsspec.*]
ignore_missing_imports = True
[mypy-zarr.*]
ignore_missing_imports = True
[mypy-yaml.*]
ignore_missing_imports = True
